[gd_scene load_steps=8 format=3 uid="uid://2oavbr7oaihg"]

[ext_resource type="Script" uid="uid://bqnepsuk13qo8" path="res://game/menu/main/title_screen.gd" id="1_lxdol"]
[ext_resource type="Theme" uid="uid://dtnd3tqllufey" path="res://styles/menu_theme.tres" id="2_4xt7k"]
[ext_resource type="PackedScene" uid="uid://bxlccevt52y70" path="res://game/menu/main/main_menu.tscn" id="2_o0rbc"]
[ext_resource type="PackedScene" uid="uid://btr60idiit4y7" path="res://game/menu/options/options.tscn" id="3_88gnj"]
[ext_resource type="PackedScene" uid="uid://c3q3g2647qc27" path="res://game/menu/main/credits.tscn" id="4_w1y3c"]
[ext_resource type="PackedScene" uid="uid://chdrjc7c6bdpb" path="res://game/entities/world/background.tscn" id="5_88gnj"]
[ext_resource type="PackedScene" uid="uid://c36n317rhv8k7" path="res://game/menu/main/seed_selection_menu.tscn" id="5_w1y3c"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lxdol")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_4xt7k")

[node name="MainMenu" parent="MarginContainer" instance=ExtResource("2_o0rbc")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="Options" parent="MarginContainer" instance=ExtResource("3_88gnj")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Credits" parent="MarginContainer" instance=ExtResource("4_w1y3c")]
unique_name_in_owner = true
layout_mode = 2

[node name="SeedSelection" parent="MarginContainer" instance=ExtResource("5_w1y3c")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="Background" parent="." instance=ExtResource("5_88gnj")]

[connection signal="continue_game" from="MarginContainer/MainMenu" to="." method="_on_main_menu_continue_game"]
[connection signal="new_game" from="MarginContainer/MainMenu" to="." method="_on_main_menu_new_game"]
[connection signal="quit_game" from="MarginContainer/MainMenu" to="." method="_on_main_menu_quit_game"]
[connection signal="show_credits" from="MarginContainer/MainMenu" to="." method="_on_main_menu_show_credits"]
[connection signal="show_options" from="MarginContainer/MainMenu" to="." method="_on_main_menu_show_options"]
[connection signal="back" from="MarginContainer/Options" to="." method="_show_main_menu"]
[connection signal="back" from="MarginContainer/Credits" to="." method="_on_credits_back"]
[connection signal="back" from="MarginContainer/SeedSelection" to="." method="_show_main_menu"]
